--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^5.7.0",
+    "firebaseui": "^3.4.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
